// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wheel should match snapshot 1`] = `
<styled.div
  animation={
    Keyframes {
      "id": "sc-keyframes-fbSDaz",
      "inject": [Function],
      "name": "fbSDaz",
      "rules": Array [
        "@-webkit-keyframes fbSDaz{from{-webkit-transform:rotateX(0deg);-ms-transform:rotateX(0deg);transform:rotateX(0deg);}to{-webkit-transform:rotateX(-930deg);-ms-transform:rotateX(-930deg);transform:rotateX(-930deg);}}",
        "@keyframes fbSDaz{from{-webkit-transform:rotateX(0deg);-ms-transform:rotateX(0deg);transform:rotateX(0deg);}to{-webkit-transform:rotateX(-930deg);-ms-transform:rotateX(-930deg);transform:rotateX(-930deg);}}",
      ],
      "toString": [Function],
    }
  }
  delay={300}
  isLoading={false}
>
  <div
    className="sc-bwzfXH kFnvCg"
  >
    <styled.div
      color="rgb(198, 6, 0)"
      radius={200}
      rotateX={0}
    >
      <div
        className="sc-bdVaJa eIXeZU"
        color="rgb(198, 6, 0)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(105, 150, 15)"
      radius={200}
      rotateX={30}
    >
      <div
        className="sc-bdVaJa VTciH"
        color="rgb(105, 150, 15)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(79, 190, 242)"
      radius={200}
      rotateX={60}
    >
      <div
        className="sc-bdVaJa eBVXud"
        color="rgb(79, 190, 242)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(249, 244, 87)"
      radius={200}
      rotateX={90}
    >
      <div
        className="sc-bdVaJa dDjJrr"
        color="rgb(249, 244, 87)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(198, 6, 0)"
      radius={200}
      rotateX={120}
    >
      <div
        className="sc-bdVaJa eanJqt"
        color="rgb(198, 6, 0)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(105, 150, 15)"
      radius={200}
      rotateX={150}
    >
      <div
        className="sc-bdVaJa eonNfq"
        color="rgb(105, 150, 15)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(79, 190, 242)"
      radius={200}
      rotateX={180}
    >
      <div
        className="sc-bdVaJa gPqlbN"
        color="rgb(79, 190, 242)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(249, 244, 87)"
      radius={200}
      rotateX={210}
    >
      <div
        className="sc-bdVaJa esVdTs"
        color="rgb(249, 244, 87)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(198, 6, 0)"
      radius={200}
      rotateX={240}
    >
      <div
        className="sc-bdVaJa dNkfLi"
        color="rgb(198, 6, 0)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(105, 150, 15)"
      radius={200}
      rotateX={270}
    >
      <div
        className="sc-bdVaJa lfcSTa"
        color="rgb(105, 150, 15)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(79, 190, 242)"
      radius={200}
      rotateX={300}
    >
      <div
        className="sc-bdVaJa bVdIgK"
        color="rgb(79, 190, 242)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(249, 244, 87)"
      radius={200}
      rotateX={330}
    >
      <div
        className="sc-bdVaJa gWhcpB"
        color="rgb(249, 244, 87)"
        radius={200}
      />
    </styled.div>
  </div>
</styled.div>
`;

exports[`Wheel should match snapshot on initial render 1`] = `
<styled.div
  animation={
    Keyframes {
      "id": "sc-keyframes-iffaHa",
      "inject": [Function],
      "name": "iffaHa",
      "rules": Array [
        "@-webkit-keyframes iffaHa{from{-webkit-transform:rotateX(0deg);-ms-transform:rotateX(0deg);transform:rotateX(0deg);}to{-webkit-transform:rotateX(-360deg);-ms-transform:rotateX(-360deg);transform:rotateX(-360deg);}}",
        "@keyframes iffaHa{from{-webkit-transform:rotateX(0deg);-ms-transform:rotateX(0deg);transform:rotateX(0deg);}to{-webkit-transform:rotateX(-360deg);-ms-transform:rotateX(-360deg);transform:rotateX(-360deg);}}",
      ],
      "toString": [Function],
    }
  }
  delay={300}
  isLoading={false}
>
  <div
    className="sc-bwzfXH UCihG"
  >
    <styled.div
      color="rgb(198, 6, 0)"
      radius={200}
      rotateX={0}
    >
      <div
        className="sc-bdVaJa eIXeZU"
        color="rgb(198, 6, 0)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(105, 150, 15)"
      radius={200}
      rotateX={30}
    >
      <div
        className="sc-bdVaJa VTciH"
        color="rgb(105, 150, 15)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(79, 190, 242)"
      radius={200}
      rotateX={60}
    >
      <div
        className="sc-bdVaJa eBVXud"
        color="rgb(79, 190, 242)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(249, 244, 87)"
      radius={200}
      rotateX={90}
    >
      <div
        className="sc-bdVaJa dDjJrr"
        color="rgb(249, 244, 87)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(198, 6, 0)"
      radius={200}
      rotateX={120}
    >
      <div
        className="sc-bdVaJa eanJqt"
        color="rgb(198, 6, 0)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(105, 150, 15)"
      radius={200}
      rotateX={150}
    >
      <div
        className="sc-bdVaJa eonNfq"
        color="rgb(105, 150, 15)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(79, 190, 242)"
      radius={200}
      rotateX={180}
    >
      <div
        className="sc-bdVaJa gPqlbN"
        color="rgb(79, 190, 242)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(249, 244, 87)"
      radius={200}
      rotateX={210}
    >
      <div
        className="sc-bdVaJa esVdTs"
        color="rgb(249, 244, 87)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(198, 6, 0)"
      radius={200}
      rotateX={240}
    >
      <div
        className="sc-bdVaJa dNkfLi"
        color="rgb(198, 6, 0)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(105, 150, 15)"
      radius={200}
      rotateX={270}
    >
      <div
        className="sc-bdVaJa lfcSTa"
        color="rgb(105, 150, 15)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(79, 190, 242)"
      radius={200}
      rotateX={300}
    >
      <div
        className="sc-bdVaJa bVdIgK"
        color="rgb(79, 190, 242)"
        radius={200}
      />
    </styled.div>
    <styled.div
      color="rgb(249, 244, 87)"
      radius={200}
      rotateX={330}
    >
      <div
        className="sc-bdVaJa gWhcpB"
        color="rgb(249, 244, 87)"
        radius={200}
      />
    </styled.div>
  </div>
</styled.div>
`;
